2001-01-29 John R. Jackson <jrj@purdue.edu>

	* tape-src/output-tape.c (tape_tapefd_status): Convert flag values
	  to booleans (compliments of Marc W. Mengel <mengel@fnal.gov>).
	* tape-src/tapeio.c (tape_fsf): Use ap_snprintf instead of snprintf
	  (also compliments of Marc).

2001-01-26 John R. Jackson <jrj@purdue.edu>

	* changer-src/Makefile.am: Double up the references to libamanda to
	  handle systems that put regex in strange places.
	* client-src/Makefile.am: Ditto.
	* recover-src/Makefile.am: Ditto.
	* restore-src/Makefile.am: Ditto.
	* server-src/Makefile.am: Ditto.
	* tape-src/Makefile.am: Ditto.

2001-01-24 John R. Jackson <jrj@purdue.edu>

	* docs/VTAPE-API: Added.

2001-01-23 John R. Jackson <jrj@purdue.edu>

	* configure.in: Add tapeio switch from Marc Mengel <mengel@fnal.gov>,
	  enhance and add "null" and "file" output drivers.  Change all
	  tape changers (except chg-scsi) to use amdd and ammt.  Change all
	  tape changers (except chg-scsi) to log and use a consistent
	  error reporting scheme.  Fix various bugs along the way.  Add new
	  chg-multi config option, posteject, which is an optional script
	  to call after each "tape" is ejected (e.g. to use to start a
	  CDROM writer).  Remove special code for tapedev of /dev/null
	  (now handled by the "null" output driver).  Changed the taper
	  protocol to pass the host/disk/level so the write can send that
	  along to the output driver.  Fairly major rework of amrestore
	  to clean up tape/non-tape and other oddities.
	* changer-src/chg-chio.pl.in: Ditto.
	* changer-src/chg-chs.sh.in: Ditto.
	* changer-src/chg-manual.sh.in: Ditto.
	* changer-src/chg-mtx.sh.in: Ditto.
	* changer-src/chg-multi.sh.in: Ditto.
	* changer-src/chg-rth.pl.in: Ditto.
	* changer-src/chg-zd-mtx.sh.in: Ditto.
	* client-src/sendbackup.c: Ditto.
	* common-src/alloc.c: Ditto.
	* common-src/amanda.h: Ditto.
	* docs/INTERNALS: Ditto.
	* man/Makefile.am: Ditto.
	* man/amanda.8.in: Ditto.
	* man/amdd.8: Ditto.
	* man/ammt.8: Ditto.